--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "twig/twig": "~1.18",
         "slim/slim": "2.5.0",
         "slim/extras": "~2.0.3",
-        "slim/views": "~0.1.3"
+        "slim/views": "~0.1.3",
+        "twbs/bootstrap": "3.3.*@dev"
     },
     "autoload": {
         "psr-4": {"": "lib/"}
